--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,64 +1,21 @@
-include: package:lints/recommended.yaml
-
-analyzer:
-  language:
-    strict-inference: true
-    strict-raw-types: true
-  exclude:
-    - test/lib/src/fixtures/**
+include: package:flutter_lints/flutter.yaml
 
 linter:
-  # The lint rules applied to this project can be customized in the
-  # section below to disable rules from the `package:flutter_lints/flutter.yaml`
-  # included above or to enable additional rules. A list of all available lints
-  # and their documentation is published at
-  # https://dart-lang.github.io/linter/lints/index.html.
-  #
-  # Instead of disabling a lint rule for the entire project in the
-  # section below, it can also be suppressed for a single line of code
-  # or a specific dart file by using the `// ignore: name_of_lint` and
-  # `// ignore_for_file: name_of_lint` syntax on the line or in the file
-  # producing the lint.
   rules:
-    always_declare_return_types: true
-    always_put_control_body_on_new_line: true
-    always_use_package_imports: true
-    avoid_annotating_with_dynamic: true
-    avoid_bool_literals_in_conditional_expressions: true
-    avoid_catches_without_on_clauses: true
-    avoid_catching_errors: true
-    avoid_classes_with_only_static_members: true
-    avoid_double_and_int_checks: true
-    avoid_dynamic_calls: true
-    avoid_equals_and_hash_code_on_mutable_classes: true
-    avoid_escaping_inner_quotes: true
-    avoid_final_parameters: true
-    avoid_implementing_value_types: true
-    avoid_multiple_declarations_per_line: true
-    avoid_positional_boolean_parameters: true
-    avoid_returning_null_for_future: true
-    avoid_type_to_string: true
-    cancel_subscriptions: true
-    diagnostic_describe_all_properties: true
-    literal_only_boolean_expressions: true
-    no_adjacent_strings_in_list: true
-    package_api_docs: true
-    prefer_single_quotes: true
-    provide_deprecation_message: true
-    public_member_api_docs: true
-    require_trailing_commas: true
-    secure_pubspec_urls: true
-    sort_pub_dependencies: true
-    sort_unnamed_constructors_first: true
-    test_types_in_equals: true
-    throw_in_finally: true
-    type_annotate_public_apis: true
-    unawaited_futures: true
-    unnecessary_await_in_return: true
-    unnecessary_constructor_name: true
-    unnecessary_final: true
-    unnecessary_late: true
-    unnecessary_statements: true
-    unsafe_html: true
-    use_string_buffers: true
-    use_test_throws_matchers: true
+    - always_declare_return_types
+    - avoid_equals_and_hash_code_on_mutable_classes
+    - avoid_escaping_inner_quotes
+    - avoid_slow_async_io
+    - cancel_subscriptions
+    - close_sinks
+    - directives_ordering
+    - empty_constructor_bodies
+    - omit_local_variable_types
+    - prefer_final_locals
+    - prefer_single_quotes
+    - sort_child_properties_last
+    - sort_constructors_first
+    - sort_pub_dependencies
+    - sort_unnamed_constructors_first
+    - unawaited_futures
+    - use_full_hex_values_for_flutter_colors
