--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,25 +1,25 @@
-name: license_checker
+name: license_checker2
 description: A tool to view and check the licenses of a package's dependencies. It also generates a disclaimer file containing all the package licenses.
-version: 1.6.0
+version: 2.0.0
 homepage: https://github.com/rufman/license_checker
 
 environment:
-  sdk: ">=2.15.1 <3.0.0"
+  sdk: ^3.6.0
 
 dependencies:
-  args: ^2.3.0
-  barbecue: ^0.4.0
+  args: ^2.6.0
+  barbecue: ^0.5.0
   colorize: ^3.0.0
-  io: ^1.0.3
-  package_config: ^2.0.2
-  pana: ^0.21.9
-  path: ^1.7.0
-  yaml: ^3.1.0
+  io: ^1.0.5
+  package_config: ^2.1.1
+  pana: ^0.22.18
+  path: ^1.9.1
+  yaml: ^3.1.3
 
 dev_dependencies:
-  lints: ^1.0.0
-  mockito: ^5.1.0
-  test: ^1.20.2
+  flutter_lints: ^5.0.0
+  mockito: ^5.4.5
+  test: ^1.25.14
 
 executables:
   lic_ck: license_checker
