--- a/.github/workflows/update_dependencies.yml
+++ b/.github/workflows/update_dependencies.yml
@@ -14,6 +14,6 @@ jobs:
         uses: peiffer-innovations/actions-dart-dependency-updater@v1
         with:
           merge: true
-          paths: .,example
+          paths: .
           pull_request: true
           token: ${{ secrets.REPO_TOKEN }}
